--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: #696297;
+    background-image: url('../assets/background-home.png');
 }
 .navbar {
     background-color: #403a65;
