--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,9 @@ html, body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: #696297;
     background-image: url('../assets/background-home.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 .navbar {
     background-color: #403a65;
