--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,27 @@ html, body {
     color: #25163f;
     font-size: larger;
 }
+
+.mesag {
+    width: 75%;
+    height: 300px;
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+    font-size: 14px;
+    background-color: #f9f9f9;
+    color: #333;
+}
+
+.input-area {
+    margin-top: 10px;
+    display: flex;
+    gap: 10px;
+    background-color: #403a65;
+    padding: 10px;
+    border-radius: 5px;
+    max-width: 227px;
+    margin-right: auto;
+}
