--- a/EvilCommunicatorInator/src/main/resources/static/css/main.css
+++ b/EvilCommunicatorInator/src/main/resources/static/css/main.css
@@ -4,9 +4,11 @@ html, body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: #696297;
     background-image: url('../assets/background-home.png');
+    height: 100%;
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: fixed;
+    background-size: cover;
+    /*background-attachment: fixed;*/
 }
 .navbar {
     background-color: #403a65;
